# docker-planesnitch

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  quick-start.sh  requirements.txt
.github/workflows/: pipeline.yml
planesnitch/: __main__.py  alerts.py  alerts_test.py  config.py  config_test.py  geo.py  geo_test.py  images.py  images_test.py  notify.py  notify_test.py  sources.py  watchlists.py  watchlists_test.py
