[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "planesnitch"
version = "0.1.0"
description = "Aircraft watchlist alerter for Telegram and webhooks."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "Ciprian Mandache"},
]
dependencies = [
  "aiohttp>=3.9,<4",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.11,<0.12",
]

[project.scripts]
planesnitch = "planesnitch.__main__:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["planesnitch"]

[tool.pytest.ini_options]
testpaths = ["planesnitch"]

[tool.ruff]
target-version = "py312"
